--- a/.dockerignore
+++ b/.dockerignore
@@ -35,3 +35,19 @@
 /app/assets/builds/*
 !/app/assets/builds/.keep
 /public/assets
+
+.DS_Store
+.bin
+.gitignore
+.bundleignore
+.byebug_history
+.rspec
+tmp
+log
+test
+config/deploy
+public/packs
+public/packs-test
+node_modules
+yarn-error.log
+coverage
